--- a/ScoreKeeper/style.css
+++ b/ScoreKeeper/style.css
@@ -1,15 +1,17 @@
 body {
-  width: 100vh;
-  height: auto;
+  width: 100%;
+  height: 100%;
   display: flex;
   text-align: center;
+  justify-content: center;
 }
 
 #mainContainer {
+  display: block;
+  margin-top: 100px;
   align-content: space-evenly;
   width: 500px;
   height: 400px;
-  margin: auto;
 }
 
 button {
@@ -40,4 +42,12 @@ h3 {
 #reset {
   background-color: red;
   color: white;
+}
+
+.won {
+  color: green;
+}
+
+.lost {
+  color: red;
 }
